src/test/ui/in-band-lifetimes/mismatched_trait_impl.nll.stderr
error: `impl` item signature doesn't match `trait` item signature
  --> $DIR/mismatched_trait_impl.rs:9:5
   |
LL |     fn foo(&self, x: &'a u32, y: &u32) -> &'a u32;
   |     ---------------------------------------------- expected fn(&i32, &'a u32, &u32) -> &'a u32
...
LL |     fn foo(&self, x: &u32, y: &'a u32) -> &'a u32 {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ found fn(&i32, &u32, &u32) -> &u32
   |
   = note: expected `fn(&i32, &'a u32, &u32) -> &'a u32`
              found `fn(&i32, &u32, &u32) -> &u32`

error: aborting due to previous error

